unviable fix(main/footer gap)

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -133,6 +133,17 @@ header .banner {
   }
 }
 
+body main {
+  position: relative;
+  margin-top: 20%;
+  top: 2rem;
+}
+
+body footer {
+  position: relative;
+  bottom: -30rem;
+}
+
 /*-----------------------------------------------------------------------------------------*/
 /*----------------------------------------- INSCRIPTION ----------------------------------------*/
 /*-----------------------------------------------------------------------------------------*/
